tests/ui/unwind-abis/feature-gate-c-unwind.stderr
warning: unknown lint: `ffi_unwind_calls`
  --> $DIR/feature-gate-c-unwind.rs:4:1
   |
LL | #![allow(ffi_unwind_calls)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: the `ffi_unwind_calls` lint is unstable
   = note: see issue #74990 <https://github.com/rust-lang/rust/issues/74990> for more information
   = help: add `#![feature(c_unwind)]` to the crate attributes to enable
   = note: `#[warn(unknown_lints)]` on by default

error[E0658]: C-unwind ABI is experimental and subject to change
  --> $DIR/feature-gate-c-unwind.rs:8:8
   |
LL | extern "C-unwind" fn f() {}
   |        ^^^^^^^^^^
   |
   = note: see issue #74990 <https://github.com/rust-lang/rust/issues/74990> for more information
   = help: add `#![feature(c_unwind)]` to the crate attributes to enable

warning: unknown lint: `ffi_unwind_calls`
  --> $DIR/feature-gate-c-unwind.rs:4:1
   |
LL | #![allow(ffi_unwind_calls)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: the `ffi_unwind_calls` lint is unstable
   = note: see issue #74990 <https://github.com/rust-lang/rust/issues/74990> for more information
   = help: add `#![feature(c_unwind)]` to the crate attributes to enable

error: aborting due to previous error; 2 warnings emitted

For more information about this error, try `rustc --explain E0658`.
